[package]
name = "actix-session-surrealdb"
version = "0.1.4"
edition = "2021"
description = "Surrealdb SessionStore for actix-session"
authors = [
  "ixhbinphoenix <phoenix@ixhby.dev>"
]
repository = "https://github.com/ixhbinphoenix/actix-session-surrealdb"
categories = ["web-programming::http-server", "web-programming::websocket", "network-programming", "database"]
keywords = ["web", "actix", "surrealdb", "async", "session"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = "0.7.2"
actix-web = "4.3.1"
anyhow = "1.0.71"
async-trait = "0.1.68"
chrono = "0.4.24"
log = "0.4.17"
rand = "0.8.5"
serde = "1.0.162"
serde_json = "1.0.96"
surrealdb = "1.0.0-beta.9"
